k8s/mse.aliyun/mse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mse-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: mse
  rules:
  - host: auth.teamkits.online
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: login-svc
              port:
                number: 443
